<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:id="@+id/linearLayout_dashboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/imageView_dashboard"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_plank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textView_dashboard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/plank" />

            <TextView
                android:id="@+id/textView_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_plank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_dashboard"
                app:layout_constraintStart_toEndOf="@+id/imageView_dashboard"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_attend"
                android:background="@color/btn_normal"
                android:textColor="@color/btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView_dashboard"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/button2_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_attend"
                android:background="@color/btn_normal"
                android:textColor="@color/btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2_dashboard"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2_dashboard"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_bent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textView2_dashboard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/bentover" />

            <TextView
                android:id="@+id/textView2_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button2_dashboard"
                app:layout_constraintStart_toEndOf="@+id/imageView2_dashboard"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/imageView3_dashboard"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_squat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textView3_dashboard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/wallsquat" />

            <TextView
                android:id="@+id/textView3_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_squat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button3_dashboard"
                app:layout_constraintStart_toEndOf="@+id/imageView3_dashboard"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button3_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_attend"
                android:background="@color/btn_normal"
                android:textColor="@color/btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3_dashboard"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>