<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".ui.home.HomeFragment">

    <VideoView
        android:id="@+id/videoView_home"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/videoView_home"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/imageView_home"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:contentDescription="@string/image_sportswear"
            android:src="@drawable/people"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_home"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center"
            android:text="@string/text_sportswear"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_home"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/c1"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/imageView2_home"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:contentDescription="@string/image_distance"
            android:src="@drawable/distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2_home"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center"
            android:text="@string/text_distance"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2_home"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/c2"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/imageView3_home"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:contentDescription="@string/image_distance"
            android:src="@drawable/smartphone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3_home"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center"
            android:text="@string/text_angle"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3_home"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>